--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,13 +11,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          path: shoppingmall
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          server-id: github
-          settings-path: ${{ github.workspace }}
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
@@ -26,6 +27,7 @@ jobs:
 
       - name: Grant execute permission
         run: chmod +x ./gradlew
+        working-directory: shoppingmall
 
       - name: Build with Gradle
         run: ./gradlew build -x test
@@ -39,4 +41,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: ~/deploy.sh
+          script_stop: true
+          script: |
+            chmod +x ~/deploy.sh
+            ~/deploy.sh
