--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 HELP.md
 .gradle
-build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -36,4 +35,4 @@ out/
 ### VS Code ###
 .vscode/
 
-*.properties
+application.properties
