[fix] ignore error

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,7 +32,16 @@ jobs:
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
 
-      - name: Deploy on Server
+      - name: Copy deploy.sh to server
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "./deploy.sh"
+          target: "~/"
+
+      - name: Run deploy script
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -41,4 +50,4 @@ jobs:
           script_stop: true
           script: |
             chmod +x ~/deploy.sh
-            ~/deploy.sh
+            sudo ~/deploy.sh
