--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,3 +31,26 @@ jobs:
         env:
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+
+      - name: Copy JAR to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "build/libs/shoppingmall-0.0.1-SNAPSHOT.jar"
+          target: "/home/ubuntu/"
+
+      - name: Run JAR on EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ubuntu
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /home/ubuntu
+            pkill -f 'shoppingmall-0.0.1-SNAPSHOT.jar' || true
+            nohup java -Xms128m -Xmx512m -jar shoppingmall-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+
+
+
