--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.profiles.active=local
 
 # Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/mutsa_shoppingmall?serverTimezone=Asia/Seoul
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
