--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=shoppingmall
 server.address=0.0.0.0
 server.port=8080
-spring.profiles.active=local
 
 # Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/mutsa_shoppingmall?serverTimezone=Asia/Seoul
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=root
+spring.datasource.password=mamavvbb80!
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
