--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,5 @@
 name: Gradle Package
+
 on:
   push:
     branches:
@@ -27,11 +28,8 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: |
-          ./gradlew build -x test \
-          -Dspring.datasource.username=${{ secrets.DB_USERNAME }} \
-          -Dspring.datasource.password=${{ secrets.DB_PASSWORD }}          
-          
+        run: ./gradlew build -x test
+
       - name: Copy JAR to EC2
         uses: appleboy/scp-action@v0.1.7
         with:
@@ -41,13 +39,18 @@ jobs:
           source: "build/libs/shoppingmall-0.0.1-SNAPSHOT.jar"
           target: "/home/ubuntu/"
 
-      - name: Restart JAR Service on EC2
+      - name: Run JAR on EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ubuntu
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            sudo systemctl start shoppingmall
+            pkill -f shoppingmall-0.0.1-SNAPSHOT.jar || true
+            nohup java -Xms128m -Xmx512m \
+              -Dspring.datasource.username=${{ secrets.DB_USERNAME }} \
+              -Dspring.datasource.password=${{ secrets.DB_PASSWORD }} \
+              -jar /home/ubuntu/shoppingmall-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+
 
 
