--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 
 # Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/mutsa_shoppingmall?serverTimezone=Asia/Seoul
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=root
+spring.datasource.password=mamavvbb80!
 
 
 # JPA
